<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name :</string>
    <string name="address">Address :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="sell_price">Sell Price</string>
    <string name="quantity">Quantity</string>
    <string name="qr_code">QR code</string>
    <string name="weight">Weight</string>
    <string name="camera_error">Error while capturing Image</string>
    <string name="discard_dialog">Are you sure you want to discard changes</string>
    <string name="discard_dialog_title">Alert</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_client">Add Client</string>
    <string name="edit_product">Edit Product</string>
    <string name="permission_denied">permission denied</string>
    <string name="edit">edit</string>
    <string name="dialog_delete_warning">Are you sure you want to delete this product</string>
    <string name="delete">delete</string>
</resources>
