<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ClientEditActivity">

    <TextView
        android:id="@+id/edit_client_name_text_view"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/edit_client_name_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_client_name_edit_text" />

    <TextView
        android:id="@+id/edit_client_address_text_view"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/address"
        app:layout_constraintBottom_toBottomOf="@+id/edit_client_address_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_client_address_edit_text" />

    <TextView
        android:id="@+id/edit_client_phone_text_view"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/phone_number"
        app:layout_constraintBottom_toBottomOf="@+id/edit_client_phone_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_client_phone_edit_text" />

    <EditText
        android:id="@+id/edit_client_name_edit_text"
        style="@style/EditorFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_client_name_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_client_address_edit_text"
        style="@style/EditorFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_client_address_text_view"
        app:layout_constraintTop_toBottomOf="@+id/edit_client_name_edit_text" />

    <EditText
        android:id="@+id/edit_client_phone_edit_text"
        style="@style/EditorFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_client_phone_text_view"
        app:layout_constraintTop_toBottomOf="@+id/edit_client_address_edit_text" />

    <Button
        android:id="@+id/client_edit_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/save"
        android:onClick="save"

        app:layout_constraintBaseline_toBaselineOf="@+id/client_edit_cancel_button"
        app:layout_constraintStart_toStartOf="@+id/edit_client_phone_edit_text" />

    <Button
        android:id="@+id/client_edit_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/client_edit_save_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_client_phone_edit_text" />
</android.support.constraint.ConstraintLayout>