<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductEditActivity">

    <TextView
        android:id="@+id/text2"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/edit_product_name_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_product_name_edit_text" />

    <TextView
        android:id="@+id/text3"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sell_price"
        app:layout_constraintBottom_toBottomOf="@+id/edit_product_sell_price_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/edit_product_sell_price_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_product_sell_price_edit_text" />

    <TextView
        android:id="@+id/text6"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/quantity"
        app:layout_constraintBottom_toBottomOf="@+id/edit_product_name_edit_text"
        app:layout_constraintStart_toEndOf="@+id/edit_product_name_edit_text"
        app:layout_constraintTop_toTopOf="@+id/edit_product_name_edit_text" />

    <TextView
        android:id="@+id/text5"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/weight"
        app:layout_constraintBottom_toBottomOf="@+id/edit_product_weight_edit_text"
        app:layout_constraintStart_toEndOf="@+id/edit_product_camera_button"
        app:layout_constraintTop_toTopOf="@+id/edit_product_weight_edit_text"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/text4"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/qr_code"
        app:layout_constraintBottom_toBottomOf="@+id/edit_product_qr_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_product_qr_edit_text" />

    <EditText
        android:id="@+id/edit_product_name_edit_text"
        style="@style/EditorFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edit_product_gallery_button"
        app:layout_constraintStart_toEndOf="@+id/text2"
        app:layout_constraintTop_toBottomOf="@+id/edit_product_image" />

    <EditText
        android:id="@+id/edit_product_sell_price_edit_text"
        style="@style/EditorFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/sell_price"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/text5"
        app:layout_constraintStart_toEndOf="@+id/text3"
        app:layout_constraintTop_toBottomOf="@+id/edit_product_name_edit_text" />

    <EditText
        android:id="@+id/edit_product_quantity_edit_text"
        style="@style/EditorFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/quantity"
        android:inputType="numberSigned"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/edit_product_name_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toEndOf="@+id/text6"
        app:layout_constraintTop_toTopOf="@+id/edit_product_name_edit_text" />

    <EditText
        android:id="@+id/edit_product_qr_edit_text"
        style="@style/EditorFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/qr_code"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/edit_product_add_qr_button"
        app:layout_constraintStart_toEndOf="@+id/text4"
        app:layout_constraintTop_toBottomOf="@+id/edit_product_sell_price_edit_text" />

    <Button
        android:id="@+id/edit_product_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="save"
        android:text="@string/save"

        app:layout_constraintBaseline_toBaselineOf="@+id/edit_product_cancel_button"
        app:layout_constraintStart_toStartOf="@+id/edit_product_qr_edit_text" />

    <Button
        android:id="@+id/edit_product_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_product_save_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_product_qr_edit_text" />

    <ImageView
        android:id="@+id/edit_product_image"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <ImageButton
        android:id="@+id/edit_product_camera_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:cropToPadding="true"
        android:foreground="?attr/selectableItemBackground"
        android:onClick="chooseImageFromCamera"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/edit_product_image"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/edit_product_image"
        app:srcCompat="@drawable/ic_photo_camera_pink_500_36dp"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/edit_product_gallery_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:cropToPadding="false"
        android:foreground="?attr/selectableItemBackground"
        android:onClick="chooseImageFromGallery"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/edit_product_image"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/edit_product_image"
        app:srcCompat="@drawable/ic_insert_photo_pink_500_48dp"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/edit_product_add_qr_button"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:onClick="getQRCode"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/edit_product_qr_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_product_qr_edit_text"
        app:srcCompat="@drawable/ic_scan"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edit_product_weight_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/edit_product_sell_price_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintStart_toEndOf="@+id/text5"
        app:layout_constraintTop_toTopOf="@+id/edit_product_sell_price_edit_text"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_product_weight_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_product_weight_edit_text" />

</android.support.constraint.ConstraintLayout>